--- a/css/1Template.css
+++ b/css/1Template.css
@@ -429,7 +429,7 @@ ul.rcentside *{-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizi
 
 #top_blogger_EN{background:url(https://1.bp.blogspot.com/-lSJ6JiuwXbk/XmZqR9JooHI/AAAAAAAAQrY/BVLl_25d86orUhullzVXyzzpsvUO-oF5wCLcBGAsYHQ/s1600/83588807_194502491703090_1019282836982595584_n.jpg)}
 }
-#top_blogger_EN{position:relative;display:table;width:100%;height:65vh;margin:0!important;padding:0!important;z-index:10;background:url(https://1.bp.blogspot.com/-aYW2kwvOs5o/XXPE9Oz1dQI/AAAAAAAAQA4/telTChRciGgrLmMj7av2-LHXNVaa71O0QCLcBGAs/s1600/20190907_215359_0000.png) no-repeat center center!important;background-size:cover!important;-webkit-user-select:none;-moz-user-select:none;-o-user-select:none}
+#top_blogger_EN{position:relative;display:table;width:100%;height:65vh;margin:0!important;padding:0!important;z-index:10;background:url(https://1.bp.blogspot.com/-lSJ6JiuwXbk/XmZqR9JooHI/AAAAAAAAQrY/BVLl_25d86orUhullzVXyzzpsvUO-oF5wCLcBGAsYHQ/s1600/83588807_194502491703090_1019282836982595584_n.jpg) no-repeat center center!important;background-size:cover!important;-webkit-user-select:none;-moz-user-select:none;-o-user-select:none}
 #top_blogger_EN:before{content:'';opacity:0.5;position:absolute;top:0;right:0;bottom:0;left:0;z-index:0;background:linear-gradient(120deg,#333,#6d9698)}
 #top_blogger_EN:after{content:'';z-index:0.3;position:absolute;top:0;right:0;bottom:0;left:0;background-image:linear-gradient(transparent,rgba(51, 51, 51, 0.15) 0%,rgba(12,23,36,0.4))}
 .content_blogger_ENV{position:relative;z-index:3}/* Develop blogvnit.com */
